# rss-feeds

./: Makefile  README.md  feeds.yaml  pyproject.toml
.github/workflows/: cleanup_deprecated_feeds.yml  label_new_feed.yml  lint.yml  run_feeds.yml  run_selenium_feeds.yml  test_feed.yml  validate_feeds.yml
feed_generators/: brettski_blog.py  googlecloud_blog.py  itopfield_blog.py  jamiehurst_blog.py  pulumi_blog.py  utils.py
feeds/: feed_anthropic_engineering.xml  feed_anthropic_news.xml  feed_anthropic_research.xml  feed_brettski.xml  feed_claude.xml  feed_googlecloud.xml  feed_itopfield.xml  feed_jamiehurst.xml  feed_pulumi.xml
makefiles/: dev.mk  feeds.mk
